@@ -33,6 +33,7 @@ version <next>:
 - improved Quickdraw compatibility
 - NVIDIA NVENC-accelerated H.264 and HEVC encoding support
 - Multipart JPEG demuxer
+- Support the extended vp9 profiles in the libvpx wrapper
 
 
 version 11:
